fixed imports and added lambdas